@@ -94,3 +94,23 @@ log4j.appender.utrs_removed.Append=true
 log4j.appender.utrs_removed.File=logs/utrs_removed.log
 log4j.appender.utrs_removed.layout=org.apache.log4j.PatternLayout
 log4j.appender.utrs_removed.layout.ConversionPattern=[%d] - %m%n
+
+### inserted genes positions
+log4j.logger.inserted_gene_pos=debug, inserted_gene_pos
+log4j.appender.inserted_gene_pos=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.inserted_gene_pos.Threshold=INFO
+log4j.appender.inserted_gene_pos.File=logs/inserted_gene_pos.log
+log4j.appender.inserted_gene_pos.layout=org.apache.log4j.PatternLayout
+log4j.appender.inserted_gene_pos.layout.ConversionPattern=%d %p [%c] - %m%n
+log4j.appender.inserted_gene_pos.DatePattern='.'yyyy-MM
+log4j.appender.inserted_gene_pos.Append=true
+
+### deleted genes positions
+log4j.logger.deleted_gene_pos=debug, deleted_gene_pos
+log4j.appender.deleted_gene_pos=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.deleted_gene_pos.Threshold=INFO
+log4j.appender.deleted_gene_pos.File=logs/deleted_gene_pos.log
+log4j.appender.deleted_gene_pos.layout=org.apache.log4j.PatternLayout
+log4j.appender.deleted_gene_pos.layout.ConversionPattern=%d %p [%c] - %m%n
+log4j.appender.deleted_gene_pos.DatePattern='.'yyyy-MM
+log4j.appender.deleted_gene_pos.Append=true
